--- a/HedgeModManager/MainWindow.xaml
+++ b/HedgeModManager/MainWindow.xaml
@@ -90,8 +90,8 @@
                 <Grid>
                     <GroupBox Header="Game &amp; ModLoader" HorizontalAlignment="Stretch"   Height="185" Margin="10,10,10,0"    VerticalAlignment="Top">
                         <Grid>
-                            <Button   x:Name="Button_CPKREDIR"      Content="Install CPKREDIR"              Click="UI_CPKREDIR_Click"                       Margin="10,10,0,0"    HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164"/>
-                            <Button   x:Name="Button_OtherLoader"   Content="Uninstall {0}"                 Click="UI_OtherLoader_Click"                    Margin="10,38,0,0"    HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164"/>
+                            <Button   x:Name="Button_CPKREDIR"      Content="Install CPKREDIR"              Click="UI_CPKREDIR_Click"                       Margin="10,10,0,0"    HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164" IsEnabled="False"/>
+                            <Button   x:Name="Button_OtherLoader"   Content="Uninstall {0}"                 Click="UI_OtherLoader_Click"                    Margin="10,38,0,0"    HorizontalAlignment="Left" VerticalAlignment="Top" Height="23" Width="164" IsEnabled="False"/>
                             <CheckBox                               Content="Enable CPKREDIR"               IsChecked="{Binding CPKREDIR.Enabled}"                   Margin="10,66,0,0"    HorizontalAlignment="Left" VerticalAlignment="Top" />
                             <CheckBox                               Content="Enable Debug Console"          IsChecked="{Binding CPKREDIR.EnableDebugConsole}"        Margin="10,86,342,34" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                             <CheckBox                               Content="Enable Save File Redirection"  IsChecked="{Binding CPKREDIR.EnableSaveFileRedirection}" Margin="10,106,0,0"   HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -102,8 +102,8 @@
                     </GroupBox>
                     <GroupBox Header="HedgeModManager"      HorizontalAlignment="Stretch"   Height="221" Margin="10,200,10,0"   VerticalAlignment="Top">
                         <Grid>
-                            <CheckBox Content="Check for ModLoader Updates"                     IsChecked="{Binding CheckLoaderUpdates}"    Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="15"/>
-                            <CheckBox Content="Keep HedgeModManager open after starting a game" IsChecked="{Binding KeepOpen}"              Margin="10,30,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="15"/>
+                            <CheckBox Content="Check for ModLoader Updates"                     IsChecked="{Binding CPKREDIR.CheckLoaderUpdates}"    Margin="10,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="15"/>
+                            <CheckBox Content="Keep HedgeModManager open after starting a game" IsChecked="{Binding CPKREDIR.KeepOpen}"              Margin="10,30,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="15"/>
                             <Button   Content="About HedgeModManager"                                                                       Margin="0,0,10,10" RenderTransformOrigin="0.508,-0.424" VerticalAlignment="Bottom" HorizontalAlignment="Right" Height="48" Width="195" Click="UI_About_Click"/>
                         </Grid>
                     </GroupBox>
